form handling completed with basic styles

--- a/src/app.css
+++ b/src/app.css
@@ -9,10 +9,54 @@ body, html {
     align-items: center;
     justify-content: right;
     height: 100vh;
-    /* background: url("../Assets/Images/form-bg.jpg") no-repeat center center; */
+    background: url("../Assets/Images/form-bg.jpg") no-repeat center center;
     background-size: cover;
     background-position: center;
     margin: 0;
     padding: 0;
 }
 
+form {
+  background-color: antiquewhite;
+  padding: 80px;
+  border-radius: 10px;
+  border: 1px solid gray;
+}
+
+h1 {
+  color: rgba(77, 1, 77);
+  text-align: center;
+}
+
+.btn1 {
+  width: 40%;
+  height: 30px;
+  padding: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  border: None;
+  background-color: blueviolet;
+  color: azure;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: medium;
+  text-align: center;
+  cursor: pointer;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
+
+button{
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  background-color: rebeccapurple;
+  color: white;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 15px;
+  margin-bottom: 30px;
+}
